namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: world-clock

---
apiVersion: v1
kind: Namespace
metadata:
  name: focus-app
