focus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: focus-service
  namespace: focus-app
  labels:
    app: focus-app
spec:
  type: ClusterIP
  selector:
    app: focus-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
