clock-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clock-ingress
  namespace: world-clock
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: "demo-shared-alb" # all ingress with this group name will use the same load balancer
    alb.ingress.kubernetes.io/scheme: internet-facing    
    alb.ingress.kubernetes.io/target-type: ip              # required for Fargate (instead of "instance" for EC2)
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /clock
        pathType: Prefix
        backend:
          service:
            name: clock-service
            port:
              number: 80
